# mpz

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CNAME  CODE_OF_CONDUCT.md  Gemfile  Makefile  PKGBUILD  README.md  RELEASE.txt  alternativeto.net  build.linux.sh  build.rpm.sh  build.sh  build.win32.sh  build.win64.sh  build.windows.sh  debian.control  debian.rules  gitrevision.pri  index.html  index.md  llms-full.txt  llms.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mpz.desktop  mpz.dsc  mpz.pro  mpz.qbs  mpz.spec  org.mpz_player.mpz.desktop  org.mpz_player.mpz.metainfo.xml.in  playground.cpp  release-aur-ci.rb  release-aur-github-action.rb  release-aur.rb  (+10 more)
.github/: release-aur-github-action-qt6.rb  release-aur-github-action.rb
.github/aur/: PKGBUILD_Qt5.erb  PKGBUILD_Qt6.erb  SRCINFO_Qt5.erb  SRCINFO_Qt6.erb
.github/workflows/: _omnipackage-cache.yml  _omnipackage.yml  _refresh-omnipackage-cache.yml  codeql-analysis.yml  macos-build.yml  omnipackage-build.yml  omnipackage-next.yml  omnipackage-stable.yml  push-aur.yml  refresh-omnipacakge-cache.yml  refresh-omnipackage-cache.yml  release-appimage.yml  release-aur-package-qt6.yml  release-aur-package.yml  release-macos.yml  release-windows.yml  tests.yml  windows-release.yml
.omnipackage/: PKGBUILD.liquid  appimage.sh.liquid  config.yml  debian10_before_build.sh  debian_qt6_hack.sh  mpz.spec.liquid
.omnipackage/deb/: changelog.liquid  control.liquid  mpz.dsc.liquid  rules.liquid
.omnipackage/deb_debian10/: before_build.sh  rules.liquid
app/: Info.plist.in  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  app.pro  app.ts  busyspinner.cpp  busyspinner.h  crash_handler.cpp  crash_handler.h  diskcache.cpp  diskcache.h  dropdirs.h  eventinteceptor.h  icons.cpp  icons.h  loadingspinner.cpp  loadingspinner.h  main.cpp  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuiconstyle.h  modusoperandi.cpp  modusoperandi.h  mpdconnection.cpp  mpdconnection.h  mpzapplication.cpp  mpzapplication.h  playerstate.cpp  playerstate.h  playlist.cpp  playlist.h  resources.qrc  reveal_in_filemanager.cpp  reveal_in_filemanager.h  rnjesus.cpp  rnjesus.h  (+29 more)
app/about_ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  area51dialog.cpp  area51dialog.h
app/audio/: decoder.cpp  decoder.h  output.cpp  output.h  player.cpp  player.h
app/audio_device_ui/: devicesmenu.cpp  devicesmenu.h  outputdevicename.cpp  outputdevicename.h
app/config/: global.cpp  global.h  local.cpp  local.h  storage.cpp  storage.h  value.cpp  value.h
app/coverart/: coverartwidget.cpp  coverartwidget.h  covers.cpp  covers.h  embedded.cpp  embedded.h  foldercover.cpp  foldercover.h  mpd.cpp  mpd.h
app/crash_report/: crashlog_format.h  crashreport.cpp  crashreport.h
app/dbus/: mpris.cpp  mpris.h  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml
app/directory/: directorymodel.cpp  directoryview.cpp
app/directory_ui/: addmpddialog.cpp  addmpddialog.h  directorycontextmenu.cpp  directorycontextmenu.h  directorycontroller.cpp  directorycontroller.h  directorymodel.cpp  directorymodel.h  directoryproxyfiltermodel.cpp  directoryproxyfiltermodel.h  directorysettings.cpp  directorysettings.h  directorysettings.ui  directorysortmenu.cpp  directorysortmenu.h  directoryview.cpp  directoryview.h  radiodelegate.cpp  radiodelegate.h  radiolibrary.cpp  radiolibrary.h  radiostationdialog.cpp  radiostationdialog.h  radiostationsdialog.cpp  radiostationsdialog.h
app/eq/: autoeqimport.cpp  autoeqimport.h  band.h  (+7 more)
deb/: debian.changelog  debian.control  debian.rules  mpz.dsc
images/: mpz-workflow.apng  mpz-workflow.webm
libs/libcuefile/libcuefile_r475/src/: CMakeLists.txt  cd.c  cdtext.c  cue_parse.c  cue_print.c  cue_scan.c  cuefile.c  toc_parse.c  toc_print.c  toc_scan.c
mac/: portable_macos_qt6_host.sh
rpm/: build_rpm_local.sh  mpz.spec  taglib-target-exists-fix.patch
scripts/: upload-symbols.ps1  upload-symbols.sh
src/: directorytreeviewmodel.cpp  directorytreeviewmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  playlistsviewmodel.cpp  playlistsviewmodel.h
tests/: CMakeLists.txt  radiofixtures.qrc  tst_autoeqimport.cpp  tst_columnsconfig.cpp  tst_configstorage.cpp  tst_configvalue.cpp  tst_coveralbummatch.cpp  tst_coveronlinecache.cpp  tst_coverproviderchain.cpp  tst_crashreport.cpp  tst_cueparser.cpp  tst_cueparser_fixtures.cpp  tst_eqbiquad.cpp  tst_eqexport.cpp  tst_equalizer.cpp  tst_fileparser.cpp  tst_foldercover.cpp  tst_gaplesstimeline.cpp  tst_globalconfig.cpp  tst_icecaststatus.cpp  tst_loader.cpp  tst_lrcparser.cpp  tst_lyricscache.cpp  tst_lyricstextmatch.cpp  tst_mpdentity.cpp  tst_mpdoutput.cpp  tst_mpdsong.cpp  tst_mpdstatus.cpp  tst_pcmcache.cpp  tst_pendingnext.cpp  tst_playerstate.cpp  tst_playlist.cpp  tst_providerchain.cpp  tst_radiocatalog.cpp  tst_radiocatalogresource.cpp  tst_radioitem.cpp  tst_radioresolver.cpp  tst_radiousercatalog.cpp  tst_randomtrail.cpp  tst_rnjesus.cpp  (+6 more)
tests/fixtures/cue/: ascii_beyond_dawn_electric.cue  ascii_beyond_dawn_pity.cue  ascii_burzum_thulean_cd1.cue  ascii_pain_i_am.cue  ascii_satyricon_deep.cue  backslash_dj_tiesto_traffic.cue  cp1251_jungle_book.cue  cp1251_wagner.cue  cp1252_bthvn_cd005.cue  cp1252_bthvn_cd010.cue  isrc_borknagar_fall.cue  mp3_bse_cruel_and_unusual.cue  mp3_bse_driving_insane.cue  multifile_chapuis_noel.cue  multifile_nightwish_imaginaerum.cue  multifile_therion_fleurs.cue  multifile_vibrasphere_archipelago.CUE  multifile_vibrasphere_tributaries.CUE  utf8_nachtreich_sturmgang.cue  utf8bom_beyond_dawn_electric.cue  utf8bom_bthvn_cd026.cue  utf8bom_bthvn_cd027.cue  utf8bom_dodheimsgard_bmc.cue
tests/fixtures/radio/: builtin.json
win/: RELEASE.txt  _env.sh  _extract_version.sh  all.sh  build_win32.sh  build_win64.sh  deploy_win.sh  dynamic_win32_host.sh  dynamic_win32_qt5_host.sh  dynamic_win64_host.sh  dynamic_win64_qt5_host.sh  dynamic_win64_qt6_host.sh  env_qt6_win64.sh  installer_win64_qt6_host.sh  installer_winarm64_qt6_host.sh  portable_win32_qt5_host.sh  portable_win64_qt6_host.sh  portable_winarm64_qt6_host.sh
(+282 files in other folders)
